--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
 lazy_static = "1.5.0"
 rand = "0.9.2"
 regex = "1.12.2"
+
+[lib]
+name = "omeganum_rs"
+path = "src/lib.rs"
+crate-type = ["cdylib"]
