--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
-lazy_static = "1.5.0"
+# lazy_static removed in favor of `std::sync::LazyLock`
 rand = "0.9.2"
 regex = "1.12.2"
 
