--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
 rand = "0.9.2"
 regex = "1.12.2"
 
+[dev-dependencies]
+quickcheck = "1.0"
+
 [lib]
 name = "omeganum_rs"
 path = "src/lib.rs"
