--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -9,11 +9,11 @@ rustflags = [
   "-C", "link-arg=-undefined",
   "-C", "link-arg=dynamic_lookup",
 ]
-linker = ".cargo/x86_64-apple-darwin-cc.bat"
+#linker = ".cargo/x86_64-apple-darwin-cc.bat"
 
 [target.aarch64-apple-darwin]
 rustflags = [
   "-C", "link-arg=-undefined",
   "-C", "link-arg=dynamic_lookup",
 ]
-linker = ".cargo/aarch64-apple-darwin-cc.bat"
+#linker = ".cargo/aarch64-apple-darwin-cc.bat"
