--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [build]
-target-dir = "../omeganum/lib"
+target-dir = "omeganum/lib"
 
 [target.x86_64-unknown-linux-gnu]
 linker = ".cargo/x86_64-unknown-linux-gnu-cc.bat"
