Refactor release workflow and improve artifact handling
Updated the GitHub Actions workflow for releases, including renaming steps and adjusting paths for artifacts.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         include:
-          # ---- Windows (GNU) ----
+          # Windows GNU
           - os: windows-latest
             target: x86_64-pc-windows-gnu
             profile: debug
@@ -21,7 +21,7 @@ jobs:
             target: x86_64-pc-windows-gnu
             profile: release
 
-          # ---- Linux (GNU) ----
+          # Linux GNU
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             profile: debug
@@ -29,7 +29,7 @@ jobs:
             target: x86_64-unknown-linux-gnu
             profile: release
 
-          # ---- macOS Intel ----
+          # macOS Intel
           - os: macos-latest
             target: x86_64-apple-darwin
             profile: debug
@@ -37,7 +37,7 @@ jobs:
             target: x86_64-apple-darwin
             profile: release
 
-          # ---- macOS ARM ----
+          # macOS ARM
           - os: macos-latest
             target: aarch64-apple-darwin
             profile: debug
@@ -48,51 +48,87 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Rust Toolchain
+      - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
 
-      # Extra setup for Windows GNU
-      - name: Install MinGW (Windows GNU)
+      - name: Install MinGW for windows-gnu
         if: contains(matrix.target, 'windows-gnu')
         uses: msys2/setup-msys2@v2
         with:
           update: true
           install: mingw-w64-x86_64-toolchain
 
-      # Extra setup for Linux cross-compile tooling (rarely needed)
-      - name: Install Linux build tools
-        if: contains(matrix.target, 'linux-gnu')
-        run: sudo apt-get update && sudo apt-get install -y build-essential
-
-      - name: Cargo Build
+      - name: Build (cargo)
+        shell: bash
         run: |
+          set -e
           if [ "${{ matrix.profile }}" = "release" ]; then
             cargo build --target ${{ matrix.target }} --release
           else
             cargo build --target ${{ matrix.target }}
           fi
 
-      - name: Upload Artifact
+      - name: Prepare directory structure and copy binaries
+        shell: bash
+        run: |
+          set -e
+          outdir="omeganum/lib/${{ matrix.target }}/${{ matrix.profile }}"
+          mkdir -p "$outdir"
+
+          srcdir="target/${{ matrix.target }}/${{ matrix.profile }}"
+          shopt -s nullglob
+          for f in "$srcdir"/*; do
+            [ -f "$f" ] || continue
+            cp "$f" "$outdir/"
+          done
+          echo "Copied files into $outdir"
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.target }}-${{ matrix.profile }}
-          path: target/${{ matrix.target }}/release/*, target/${{ matrix.target }}/debug/*
+          name: lib-${{ matrix.target }}-${{ matrix.profile }}
+          path: omeganum/lib
           if-no-files-found: error
 
+
   release:
-    name: Publish Release
+    name: Build single combined zip and publish
     runs-on: ubuntu-latest
     needs: build
 
     steps:
+      - name: Checkout repository to get omeganum/ folder
+        uses: actions/checkout@v4
+
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          path: artifacts
+          path: downloaded_artifacts
 
-      - name: Create GitHub Release
+      - name: Merge all lib subtrees
+        shell: bash
+        run: |
+          set -e
+          mkdir -p omeganum/lib
+
+          # Each artifact will have the directory structure:
+          # downloaded_artifacts/lib-<target>-<profile>/omeganum/lib/<target>/<profile>/*
+          for dir in downloaded_artifacts/*; do
+            echo "Merging $dir"
+            cp -r "$dir/omeganum/lib/"* omeganum/lib/ 2>/dev/null || true
+          done
+
+          echo "Final tree:"
+          find omeganum -maxdepth 4 -type f
+
+      - name: Create final omeganum.zip
+        shell: bash
+        run: |
+          zip -r omeganum.zip omeganum
+
+      - name: Publish Release
         uses: softprops/action-gh-release@v2
         with:
-          files: artifacts/**/* 
+          files: omeganum.zip
