--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,6 +72,10 @@ jobs:
           else
             cargo build --target ${{ matrix.target }}
           fi
+      - name: List target directory
+        run: |
+          echo "=== target (${{ matrix.target }} - ${{ matrix.profile }}) ==="
+          find target -maxdepth 4 -type f | sort
 
       - name: Strip release binaries
         if: matrix.profile == 'release'
