--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,88 +72,45 @@ jobs:
           else
             cargo build --target ${{ matrix.target }}
           fi
-      - name: List target directory
-        run: |
-          echo "=== target (${{ matrix.target }} - ${{ matrix.profile }}) ==="
-          find target -maxdepth 4 -type f | sort
-
-      - name: Strip release binaries
-        if: matrix.profile == 'release'
-        shell: bash
-        run: |
-          set -e
-          srcdir="target/${{ matrix.target }}/release"
-
-          echo "Stripping binaries in $srcdir"
-
-          shopt -s nullglob
-          for f in "$srcdir"/*; do
-            # Only strip actual binary files
-            [ -f "$f" ] || continue
-
-            case "${{ matrix.target }}" in
-              *windows-gnu*)
-                echo "Stripping (mingw) $f"
-                x86_64-w64-mingw32-strip "$f" || true
-                ;;
-              *unknown-linux-gnu*)
-                echo "Stripping (linux) $f"
-                strip "$f" || true
-                ;;
-              *apple-darwin*)
-                echo "Stripping (macOS) $f"
-                strip -x "$f" || true
-                ;;
-              *)
-                echo "Unknown platform, not stripping."
-                ;;
-            esac
-          done
 
       - name: Prepare directory structure and copy binaries
         shell: bash
         run: |
           set -e
 
-          outdir="omeganum/lib/${{ matrix.target }}/${{ matrix.profile }}"
+          outdir="omeganum/libout/${{ matrix.target }}/${{ matrix.profile }}"
           mkdir -p "$outdir"
 
-          srcdir="target/${{ matrix.target }}/${{ matrix.profile }}"
-
-          
-          # Determine library filename based on OS and target
+          srcdir="omeganum/lib/${{ matrix.target }}/${{ matrix.profile }}"
           target="${{ matrix.target }}"
-          profile="${{ matrix.profile }}"
           
-          # Look for library files with common patterns
+          # Determine library filename based on platform
           if [[ "$target" == *"windows"* ]]; then
-            # Windows DLL
-            libfile=$(find "$srcdir" -maxdepth 1 -name "*.dll" | head -1)
+            # Windows DLL - usually omeganum_rs.dll
+            libfile=$(find "$srcdir" -name "*.dll" -type f | head -1)
           elif [[ "$target" == *"darwin"* ]]; then
-            # macOS dylib
-            libfile=$(find "$srcdir" -maxdepth 1 -name "*.dylib" | head -1)
+            # macOS dylib - usually libomeganum_rs.dylib
+            libfile=$(find "$srcdir" -name "*.dylib" -type f | head -1)
           else
-            # Linux and other Unix-like systems use .so
-            libfile=$(find "$srcdir" -maxdepth 1 -name "*.so" | head -1)
+            # Linux and other Unix-like systems use .so - usually libomeganum_rs.so
+            libfile=$(find "$srcdir" -name "*.so" -type f | head -1)
           fi
           
           if [ -n "$libfile" ] && [ -f "$libfile" ]; then
             cp "$libfile" "$outdir/"
             echo "Copied library file: $(basename "$libfile")"
           else
-            echo "Warning: No library file found in $srcdir"
-            ls -la "$srcdir/" || true
+            echo "ERROR: No library file found in $srcdir"
+            echo "Directory contents:"
+            find "$srcdir" -type f | head -20
             exit 1
           fi
-          
-          echo "Final directory structure:"
-          find "$outdir" -type f
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: lib-${{ matrix.target }}-${{ matrix.profile }}
-          path: omeganum/lib
+          path: omeganum/libout
           if-no-files-found: error
 
 
@@ -179,7 +136,9 @@ jobs:
 
           for dir in downloaded_artifacts/*; do
             echo "Merging $dir"
-            cp -r "$dir/omeganum/lib/"* omeganum/lib/ 2>/dev/null || true
+            libdir=$(ls "$dir")
+            mkdir -p "omeganum/lib/$libdir"
+            cp -RT "$dir/$libdir" "omeganum/lib/$libdir" 2>/dev/null || true
           done
 
           echo "Final directory tree:"
