--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -175,7 +175,7 @@ jobs:
           mkdir -p omeganum/lib
 
           for dir in downloaded_artifacts/*; do
-            echo "Merging $dir"
+            echo "Merging $dir ; Directory contents:"
             ls "$dir"
             rm -rf "$dir/debug"
             cp -r "$dir/*/" omeganum/lib/ 2>/dev/null || true
