--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,7 +115,7 @@ jobs:
         run: |
           set -e
 
-          outdir="omeganum/lib/${{ matrix.target }}/${{ matrix.profile }}"
+          outdir="target/${{ matrix.target }}/${{ matrix.profile }}"
           mkdir -p "$outdir"
 
           srcdir="target/${{ matrix.target }}/${{ matrix.profile }}"
